--- a/Bekhteff/angular.json
+++ b/Bekhteff/angular.json
@@ -38,11 +38,16 @@
                             "node_modules/angular-bootstrap-md/assets/scss/bootstrap/bootstrap.scss",
                             "node_modules/angular-bootstrap-md/assets/scss/mdb.scss",
                             "node_modules/animate.css/animate.css",
-                            "src/styles.scss"
+                            "src/styles.scss",
+                            "node_modules/bootstrap/dist/css/bootstrap.min.css",
+                            "node_modules/wowjs/css/libs/animate.css"
                         ],
                         "scripts": [
                             "node_modules/chart.js/dist/Chart.js",
-                            "node_modules/hammerjs/hammer.min.js"
+                            "node_modules/hammerjs/hammer.min.js",
+                            "node_modules/jquery/dist/jquery.js",
+                            "node_modules/bootstrap/dist/js/bootstrap.js",
+                            "node_modules/wowjs/dist/wow.js"
                         ]
                     },
                     "configurations": {
