--- a/Bekhteff/package.json
+++ b/Bekhteff/package.json
@@ -26,7 +26,7 @@
     "animate.css": "^4.1.1",
     "chart.js": "^2.5.0",
     "hammerjs": "^2.0.8",
-    "rxjs": "~6.6.0",
+    "rxjs": "^6.6.3",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
@@ -35,6 +35,7 @@
     "@angular/cli": "~11.0.1",
     "@angular/compiler-cli": "~11.0.0",
     "@types/jasmine": "~3.6.0",
+    "@types/jquery": "^3.5.4",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
