--- a/Bekhteff/angular.json
+++ b/Bekhteff/angular.json
@@ -31,6 +31,7 @@
                             "src/assets"
                         ],
                         "styles": [
+                            "node_modules/bootstrap/dist/css/bootstrap.min.css",
                             "node_modules/@fortawesome/fontawesome-free/scss/fontawesome.scss",
                             "node_modules/@fortawesome/fontawesome-free/scss/solid.scss",
                             "node_modules/@fortawesome/fontawesome-free/scss/regular.scss",
@@ -42,7 +43,10 @@
                         ],
                         "scripts": [
                             "node_modules/chart.js/dist/Chart.js",
-                            "node_modules/hammerjs/hammer.min.js"
+                            "node_modules/hammerjs/hammer.min.js",
+                            {
+                                "input": "node_modules/jquery/dist/jquery.min.js"
+                            }
                         ]
                     },
                     "configurations": {
