--- a/Bekhteff/package.json
+++ b/Bekhteff/package.json
@@ -16,17 +16,21 @@
     "@angular/common": "~11.0.0",
     "@angular/compiler": "~11.0.0",
     "@angular/core": "~11.0.0",
-    "@angular/forms": "~11.0.0",
+    "@angular/forms": "^11.0.0",
+    "@angular/localize": "~11.0.0",
     "@angular/platform-browser": "~11.0.0",
     "@angular/platform-browser-dynamic": "~11.0.0",
     "@angular/router": "~11.0.0",
     "@fortawesome/fontawesome-free": "^5.15.1",
+    "@ng-bootstrap/ng-bootstrap": "^8.0.0",
     "@types/chart.js": "^2.9.27",
     "angular-bootstrap-md": "^10.0.0",
     "animate.css": "^4.1.1",
+    "bootstrap": "^4.5.3",
     "chart.js": "^2.5.0",
     "hammerjs": "^2.0.8",
-    "rxjs": "~6.6.0",
+    "jquery": "^3.5.1",
+    "rxjs": "^6.6.3",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
