--- a/Bekhteff/package.json
+++ b/Bekhteff/package.json
@@ -22,10 +22,15 @@
     "@angular/router": "~11.0.0",
     "@fortawesome/fontawesome-free": "^5.15.1",
     "@types/chart.js": "^2.9.27",
+    "@types/jquery": "^3.5.4",
     "angular-bootstrap-md": "^10.0.0",
     "animate.css": "^4.1.1",
+    "bootstrap": "^4.5.3",
     "chart.js": "^2.5.0",
+    "compass": "^0.1.1",
+    "compass-mixins": "^0.12.10",
     "hammerjs": "^2.0.8",
+    "jquery": "^3.5.1",
     "rxjs": "^6.6.3",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
@@ -35,7 +40,6 @@
     "@angular/cli": "~11.0.1",
     "@angular/compiler-cli": "~11.0.0",
     "@types/jasmine": "~3.6.0",
-    "@types/jquery": "^3.5.4",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
